--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -7,5 +7,10 @@
     <body>
         <h2>Welcome to Baker Street</h2>
         <h1>Welcome to your Dashboard, {{ user.username }}!</h1>
+        <ul>
+            {% for favorite in favorites %}
+                <li>{{ favorite.rank}}: {{ favorite.golfer,name}}</li>
+            {% endfor %}
+        </ul>
     </body>
 </html>
