added user to select favorite golfer in admin

--- a/accounts/templates/accounts/dashboard.html
+++ b/accounts/templates/accounts/dashboard.html
@@ -18,5 +18,6 @@
             <li>No golfers found</li>
             {% endfor %}
         </ul>
+        <h2>your fav golfer {{ favorite_golfer.golfer.name }}</h2>
     </body>
 </html>
