--- a/accounts/templates/accounts/select_favorite_golfers.html
+++ b/accounts/templates/accounts/select_favorite_golfers.html
@@ -4,7 +4,7 @@
         <title>Select Favorite Golfers</title>
     </head>
     <body>
-        <h1>Select Your Top 6 Favorite Golfers</h1>
+        <h1>Select Your Top 6 Favorite Golfers below</h1>
         
         <form method="POST">
             {% csrf_token %}
